criando método de filtro da tabela

--- a/src/tela/TelaCadastroServicos.form
+++ b/src/tela/TelaCadastroServicos.form
@@ -100,7 +100,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldNomeServico">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldNomeServicoActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldNomeServicoKeyTyped"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
