--- a/src/tela/TelaCadastroDeFuncionario.form
+++ b/src/tela/TelaCadastroDeFuncionario.form
@@ -226,7 +226,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="0">
-                <Column editable="false" title="Matricula" type="java.lang.Integer"/>
+                <Column editable="false" title="Matricula" type="java.lang.String"/>
                 <Column editable="false" title="Nome" type="java.lang.String"/>
                 <Column editable="false" title="Especialidade" type="java.lang.String"/>
               </Table>
